
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revenue-anomaly-watch"
version = "0.1.0"
description = "Monitor revenue, conversion, and gross margin anomalies and surface likely contributing factors for operators."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
